// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

//option java_multiple_files = true;
//option java_package = "io.grpc.examples.helloworld";
//option java_outer_classname = "HelloWorldProto";
//option objc_class_prefix = "HLW";

package streamer;

// The streamer service definition.
service Streamer {
  // Sends an item
  rpc Send (stream StreamerRequest) returns (stream StreamerResponse) {}
}

// The item to be processed
message Item {
  int32 id = 1;
  string value = 2;
}

// The status of the item processed
message ItemStatus {
  int32 item_id = 1;
  Status value = 2;
}

enum Status {
  CREATED = 0;
  COMPLETED = 1;
  FAILED = 2;
}

// The request message
message StreamerRequest
{
  StreamAction action = 1;
  int32 position = 2;
  ItemStatus payload = 3;
}

// The response message
message StreamerResponse {
  Item payload = 1;
} 

enum StreamAction {
  START = 0;
  CONTINUE = 1;
  STOP = 2;
}

